--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "input/third_party"]
-	path = input/third_party
+[submodule "input/third_party/dictify"]
+	path = input/third_party/dictify
 	url = https://github.com/Dharma-Sagar/dictify
