use Monlam as default

--- a/input/selection_arapatsa.yaml
+++ b/input/selection_arapatsa.yaml
@@ -1,5 +1,6 @@
 tibetan:
   dictionary:
+  - ['monlam_2020', 'སྨོན་ལམ།']
   - ['25-tshig-mdzod-chen-mo-Tib', 'ཚིག་མཛོད་ཆེན་མོ།']
   - ['37-dag_tshig_gsar_bsgrigs-Tib', 'དག་ཡིག་གསར་བསྒྲིགས།']
   - ['34-dung-dkar-tshig-mdzod-chen-mo-Tib', 'དུང་དཀར་ཚིག་མཛོད།']
